--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -86,7 +86,7 @@
 		margin-top: -25px;
 	}
 	.section_1 {
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to right, #000017, #0059c4);
 		clip-path: polygon(0 50px, 100% 0, 100% 96%, 0% 100%);
 		margin-top: -100px;
 		text-align: center;
