changed: finished on case study 1 and 2

--- a/src/assets/scss/object/component/_banner.scss
+++ b/src/assets/scss/object/component/_banner.scss
@@ -63,7 +63,7 @@
 			left: 0;
 			padding: 10px 11px 6px 25px;
 			top: 28%;
-			background: linear-gradient(to right, #2579BF, #2593D5) !important;
+			background: linear-gradient(to left, #000017, #0059c4);
 		}
 
 		p {
