--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -412,7 +412,7 @@
 	justify-content: center;
 	position: relative;
 	background: #fff;
-	color: #258acf;
+	color: #0059B4;
 	letter-spacing: 0.2em;
 	transition: 0.3s ease-in-out;
 
