--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -161,6 +161,7 @@
 	.section_2 {
 		padding-top: 55px;
 		padding-bottom: 100px;
+		position: relative;
 
 		@include is-sp {
 			padding-bottom: 75px;
