--- a/src/assets/scss/pages/_casestudy07.scss
+++ b/src/assets/scss/pages/_casestudy07.scss
@@ -1,14 +1,64 @@
 .case-all {
 	&--s1 {
 		clip-path: polygon(0 50px, 100% 0, 100% 92%, 0% 100%) !important;
+		position: relative;
 
 		@include is-sp {
 			clip-path: polygon(0 43px, 100% 12px, 100% 95%, 0% 100%) !important;
 			padding-top: 0 !important;
 		}
 
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 266px;
+			top: 0;
+			left: 0;
+			right: 0;
+			clip-path: polygon(50% 0%, 100% 0, 100% 17%, 67% 39%, 0% 20%, 0 0, 0 0);
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
+			z-index: 1;
+
+			// @include is-max(850px) {
+			// 	top: 13px;
+			// }
+
+			@include is-sp {
+				clip-path: polygon(
+					50% 0%,
+					100% 0,
+					100% 80%,
+					69% 100%,
+					0% 43%,
+					0% 0%,
+					0% 0%
+				);
+				height: 10.5%;
+				top: 0;
+			}
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			width: 100%;
+			bottom: 0;
+			left: 0;
+			height: 110px;
+			background: linear-gradient(to right, #0059c4, #000017);
+			clip-path: polygon(0 47%, 32% 0%, 100% 42%, 0% 100%);
+			opacity: 0.4;
+
+			@include is-sp {
+				clip-path: polygon(0 55%, 38% 30%, 100% 62%, 0% 100%);
+				height: 13%;
+			}
+		}
+
 		.c-case--items {
-			padding-bottom: 89px;
+			padding-bottom: 66px;
 
 			@include is-sp {
 				padding-bottom: 0;
@@ -22,7 +72,7 @@
 		.bg_1 {
 			top: -80px !important;
 			right: 67px !important;
-	
+
 			@include is-sp {
 				right: unset !important;
 			}
@@ -59,7 +109,7 @@
 			@include is-max(490px) {
 				font-size: 5vw !important;
 			}
-			
+
 			@include is-max(400px) {
 				white-space: nowrap;
 			}
@@ -142,9 +192,6 @@
 	}
 
 	.c-case03__txt__sub {
-
-
-		
 		@include is-max(412px) {
 			font-size: 6vw;
 		}
