--- a/src/assets/scss/pages/_realestateoperation.scss
+++ b/src/assets/scss/pages/_realestateoperation.scss
@@ -294,7 +294,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 				letter-spacing: 0.2em;
 			}
 		}
@@ -438,7 +438,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -455,7 +455,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -487,9 +487,9 @@
 	.sect_4 {
 		position: relative;
 		margin-top: 130px;
-		margin-bottom: 60px;
 		background-color: #fff;
 		padding-bottom: 100px;
+		z-index: 9999;
 
 		@include is-sp {
 			padding-bottom: 70px;
@@ -497,7 +497,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 				letter-spacing: 0.2em;
 			}
 		}
@@ -509,8 +509,8 @@
 
 			@include is-sp {
 				width: 122px;
-				top: -5%;
-				right: 0;
+				top: -48px;
+				right: 16px;
 				left: auto;
 			}
 
@@ -551,20 +551,20 @@
 			}
 		}
 
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			bottom: -61px;
-			height: 60px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
-			clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
+		// &::after {
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	bottom: -61px;
+		// 	height: 60px;
+		// 	background: linear-gradient(to right, #003782, #0059b6);
+		// 	-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
+		// 	clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
 
-			@include is-sp {
-				height: 30px;
-			}
-		}
+		// 	@include is-sp {
+		// 		height: 30px;
+		// 	}
+		// }
 
 		.txt_ttl {
 			@include font-line(24, 30);
@@ -608,7 +608,7 @@
 		&__header {
 			@include font-line(26, 37);
 			text-align: left;
-			color: #4688c8;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.2em;
@@ -679,7 +679,7 @@
 				.txt_ttl {
 					@include font-line(26, 30);
 					text-align: left;
-					color: #4688c8;
+					color: #0059b4;
 					font-family: yu-mincho-pr6n, sans-serif;
 					font-weight: 500;
 					letter-spacing: 0.15em;
@@ -727,7 +727,7 @@
 				&_ttl {
 					font-family: century-gothic, sans-serif;
 					@include font-line(11, 22);
-					color: #2589ce;
+					color: #0059b4;
 					letter-spacing: 0.26em;
 					text-align: center;
 					font-weight: 700;
@@ -738,7 +738,7 @@
 					font-family: yu-gothic-pr6n, sans-serif;
 					text-align: left;
 					@include font-line(9, 26);
-					color: #87b2db;
+					color: #0059b4;
 					font-weight: 700;
 					letter-spacing: 0.2em;
 
@@ -749,7 +749,7 @@
 					span {
 						margin-left: 10px;
 						font-weight: 700;
-						color: #2589ce;
+						color: #0059b4;
 						@include font-line(13, 26);
 						letter-spacing: 0.2em;
 					}
@@ -776,7 +776,7 @@
 
 		&--ttl {
 			@include font-line(26);
-			color: #4686c6;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			text-align: center;
 			font-weight: 500;
@@ -834,7 +834,7 @@
 				}
 
 				p {
-					color: #2587cc;
+					color: #0059b4;
 					font-family: yu-gothic-pr6n, sans-serif;
 					text-align: center;
 					height: 100px;
@@ -864,10 +864,51 @@
 	}
 
 	.sect_5 {
-		position: relative;
-		margin-bottom: 60px;
-		background: linear-gradient(to right, #003782, #0059b6);
+		
+		&__center{
+			background: linear-gradient(to right, #000017, #0059c6);
+			clip-path: polygon(21% 9%, 100% 0, 100% 100%, 83% 92%, 0 100%, 0 0);
+			position: relative;
 
+			@include is-sp{
+				clip-path: polygon(21% 2%, 100% 0, 100% 100%, 83% 98%, 0 100%, 0 0);
+			}
+
+			&::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                top: 0;
+                z-index: -1;
+                height: 340px;
+                background: linear-gradient(to right, #0059C4, #000017);
+                clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 21%);
+                opacity: 0.4;
+                width: 79%;
+                right: 0;
+
+				@include is-sp{
+					clip-path: polygon(100% -3%, 100% 19%, 56% 39%, 0 9%);
+					height: 200px;
+				}
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                bottom: 0;
+                height: 135px;
+                background: linear-gradient(to right, #0059C4, #000017);
+                clip-path: polygon(0 71%, 30% 15%, 100% 53%, 0% 100%);
+                opacity: 0.4;
+                width: 82%;
+
+				@include is-sp{
+					clip-path: polygon(0 51%, 40% 40%, 100% 86%, 0% 100%);
+				}
+            }
+		}
 
 
 		&--clipbg {
@@ -877,14 +918,15 @@
 		&__box-big-new {
 			position: absolute;
 			left: 46%;
-			top: 5px;
-			opacity: 0.5;
+			top: 84px;
+			opacity: 0.4;
 
 			@include is-sp {
 				width: 100px;
 				left: auto;
 				right: 7%;
-				top: 4%;
+				top: 3%;
+				opacity: 0.3;
 			}
 
 			.pc {
@@ -907,29 +949,29 @@
 		&__box-big-new2 {
 			position: absolute;
 			left: 0;
-			bottom: 8%;
-			opacity: 0.5;
+			bottom: 17%;
+			opacity: 0.4;
 
 			@include is-sp {
 				display: none;
 			}
 		}
 
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			bottom: -59px;
-			height: 60px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
-			clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
+		// &::after {
+		// 	content: "";
+		// 	position: absolute;
+		// 	width: 100%;
+		// 	bottom: -59px;
+		// 	height: 60px;
+		// 	background: linear-gradient(to right, #003782, #0059b6);
+		// 	-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
+		// 	clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 100%);
 
-			@include is-sp {
-				height: 30px;
-				bottom: -29px;
-			}
-		}
+		// 	@include is-sp {
+		// 		height: 30px;
+		// 		bottom: -29px;
+		// 	}
+		// }
 
 		.txt_ttl {
 			@include font-line(24, 30);
@@ -951,57 +993,17 @@
 
 		.l-wrap {
 			position: relative;
-
-			&::before {
-                content: "";
-                position: absolute;
-                width: 100%;
-                top: 0;
-                z-index: 150;
-                height: 340px;
-                background: linear-gradient(to right, #0059C4, #000017);
-                clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 12%);
-                opacity: 0.4;
-                width: 83%;
-                right: 0;
-                @include is-max(1071px){
-                    clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 17%);
-                }
-                @include is-sp {
-                    clip-path: polygon(100% 0%, 100% 49%, 65% 67%, 0 25%);
-                    top: 0;
-                    height: 115px;
-				}
-            }
-            &::after {
-                content: "";
-                position: absolute;
-                width: 100%;
-                bottom: 0;
-                height: 135px;
-                background: linear-gradient(to right, #0059C4, #000017);
-                clip-path: polygon(0 71%, 30% 15%, 100% 50%, 0% 100%);
-                opacity: 0.4;
-                width: 84%;
-                    @include is-max(1071px){
-                        height: 205px;
-                        clip-path: polygon(0 71%, 36% 43%, 100% 54%, 0% 100%);
-                    }
-                    @include is-sp {
-                        clip-path: polygon(0 30%, 45% 17%, 100% 76%, 0% 100%);
-                        height: 100px;
-                }
-            }
 		}
 
 		&__inner-realestate {
 			display: flex;
 			flex-wrap: wrap;
-			padding: 90px 0;
+			padding: 165px 0;
 			align-items: center;
 
 			@include is-max(750px) {
 				flex-direction: column-reverse;
+				padding: 90px 0 92px 0;
 			}
 
 			&--left,
@@ -1072,7 +1074,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -1093,7 +1095,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -1126,6 +1128,8 @@
 
 	.sect_6 {
 		background: #fff;
+		position: relative;
+		z-index: 999;
 
 		.c-buttonREP {
 			.txt {
@@ -1217,7 +1221,7 @@
 
 			@include is-max(750px) {
 				display: grid;
-				padding-bottom: 60px;
+				padding-bottom: 30px;
 			}
 
 			&--left,
@@ -1282,7 +1286,7 @@
 					&_ttl {
 						font-family: century-gothic, sans-serif;
 						@include font-line(11, 22);
-						color: #2589ce;
+						color: #0059b4;
 						letter-spacing: 0.26em;
 						text-align: center;
 						font-weight: 700;
@@ -1299,7 +1303,7 @@
 						span {
 							margin-left: 10px;
 							font-weight: 700;
-							color: #2589ce;
+							color: #0059b4;
 							@include font-line(13, 26);
 							letter-spacing: 0.2em;
 						}
@@ -1327,17 +1331,64 @@
 
 	.sect_7 {
 		position: relative;
-		margin-top: 60px;
 		margin-bottom: 60px;
-		padding-top: 70px;
-		padding-bottom: 33px;
-		background: linear-gradient(to right, #003782, #0059b6);
+		padding-top: 145px;
+		padding-bottom: 105px;
+		background: linear-gradient(to right, #000017, #0059c6);
+		clip-path: polygon(21% 5vw, 100% 0, 100% 100%, 83% 92%, 0 100%, 0 0);
+
+		@include is-max(1071px){
+			clip-path: polygon(21% 5vw, 100% 0, 100% 100%, 83% 95%, 0 100%, 0 0);
+		}
+
+		@include is-sp{
+			padding-top: 95px;
+			padding-bottom: 55px;
+			margin-bottom: 25px;
+			clip-path: polygon(21% 5vw, 100% 0, 100% 100%, 82vw 98%, 0 100%, 0 0);
+		}
+
+			&::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                top: 0;
+                height: 340px;
+                background: linear-gradient(to right, #0059C4, #000017);
+                clip-path: polygon(100% -3%, 100% 19%, 70% 44%, 0 5vw);
+                opacity: 0.4;
+                width: 79%;
+                right: 0;
+
+				@include is-sp{
+					height: 190px;
+					 clip-path: polygon(100% 0%, 100% 33%, 66% 44%, 0 5vw);
+				}
+
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                bottom: 0;
+                height: 190px;
+                background: linear-gradient(to right, #0059C4, #000017);
+                clip-path: polygon(0 71%, 38% 23%, 100% 65%, 0% 100%);
+                opacity: 0.4;
+                width: 82%;
+
+				@include is-max(1071px){
+					clip-path: polygon(0 58%, 44% 51%, 100% 88%, 0% 100%);
+				}
+
+            }
 
 		.c-buttonREP {
 			margin-top: 0;
 
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 			}
 		}
 
@@ -1375,38 +1426,6 @@
 			// @include is-max(375px){
 			// 	top: 27%;
 			// }
-		}
-
-		&::before {
-			content: " ";
-			position: absolute;
-			width: 100%;
-			top: -59px;
-			height: 60px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			-webkit-clip-path: polygon(20% 95%, 100% 0, 100% 100%, 0 100%, 0 0);
-			clip-path: polygon(20% 95%, 100%, 100% 100%, 0 100%, 0 0);
-
-			@include is-sp {
-				top: -28px;
-				height: 30px;
-			}
-		}
-
-		&::after {
-			content: " ";
-			position: absolute;
-			width: 100%;
-			bottom: -59px;
-			height: 60px;
-			background: linear-gradient(to right, #003782, #0059b6);
-			-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 98%);
-			clip-path: polygon(0 0, 100% -25%, 100% 100%, 85% 5%, 0 98%);
-
-			@include is-sp {
-				height: 30px;
-				bottom: -28px;
-			}
 		}
 
 		.l-wrap {
@@ -1481,14 +1500,14 @@
 		.card_ttl {
 			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(14, 21);
-			color: #2589ce;
+			color: #0059b4;
 			font-weight: 700;
 			letter-spacing: 0.2em;
 			padding-bottom: 10px;
 
 			@include is-max(750px) {
 				@include font-line(14, 21);
-				color: #2589ce;
+				color: #0059b4;
 				font-weight: 700;
 				letter-spacing: 0.1em;
 			}
@@ -1505,6 +1524,7 @@
 		&-cntnt {
 			padding: 0;
 			position: relative;
+			z-index: 150;
 
 			&-box-big-newest2 {
 				display: none;
@@ -1625,7 +1645,7 @@
 
 		.c-buttonREP {
 			.txt {
-				color: #2589ce;
+				color: #0059b4;
 			}
 		}
 
@@ -1668,7 +1688,7 @@
 		}
 
 		&--top {
-			border-left: 3px solid #2589ce;
+			border-left: 3px solid #0059b4;
 			padding-left: 15px;
 			position: relative;
 		}
@@ -1691,7 +1711,7 @@
 		&__header {
 			@include font-line(26, 37);
 			text-align: left;
-			color: #2589ce;
+			color: #0059b4;
 			font-family: yu-mincho-pr6n, sans-serif;
 			font-weight: 500;
 			letter-spacing: 0.1em;
@@ -1758,7 +1778,7 @@
 		.qtext {
 			font-family: yu-gothic-pr6n, sans-serif;
 			@include font-line(16, 24);
-			color: #2589ce;
+			color: #0059b4;
 			letter-spacing: 0.2em;
 			text-align: left;
 			font-weight: 700;
@@ -1901,7 +1921,7 @@
 			// span {
 			// 	margin-left: 10px;
 			// 	font-weight: 700;
-			// 	color: #2589ce;
+			// 	color: #0059b4;
 			// 	@include font-line(13, 26);
 			// 	letter-spacing: 0.2em;
 
