--- a/src/assets/scss/pages/_thanks.scss
+++ b/src/assets/scss/pages/_thanks.scss
@@ -3,7 +3,6 @@
 
 	.c-banner {
 		.bread_crumps {
-
 			.txt {
 				@include is-max(435px) {
 					font-size: 2.8vw;
@@ -14,7 +13,7 @@
 	}
 
 	.sect_1 {
-		background: linear-gradient(to right, #003782, #0059b6);
+		background: linear-gradient(to left, #0059c6, #000017);
 		padding: 100px 0 20px 0;
 		clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%) !important;
 		margin-top: -100px;
@@ -85,7 +84,6 @@
 			@include is-max(385px) {
 				font-size: 3.3vw;
 			}
-
 		}
 	}
 
