changed: finished on case study 1,2,3,4,5

--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -33,6 +33,12 @@
 		}
 	}
 
+	.c-ruf-txt {
+		@include is-max(375px) {
+			width: 70% !important;
+		}
+	}
+
 	.bread_crumps {
 		text-align: left;
 		position: relative;
