--- a/src/assets/scss/object/component/_case.scss
+++ b/src/assets/scss/object/component/_case.scss
@@ -539,7 +539,7 @@
 			}
 
 			&__sub {
-				color: $color-text01;
+				color: #0059B4;
 				font-family: yu-mincho-pr6n, sans-serif;
 				font-weight: 500 !important;
 				padding: 15px 0 20px 0;
