--- a/src/assets/scss/pages/_groupbusiness.scss
+++ b/src/assets/scss/pages/_groupbusiness.scss
@@ -47,6 +47,7 @@
 .sect_1 {
 	position: relative;
 	background: linear-gradient(to left, #0059c6, #000017);
+	clip-path: polygon(0% 6%, 100% 0%, 100% 100%, 0% 100%);
 
 	.l-wrap {
 		text-align: center;
@@ -68,7 +69,7 @@
 		background: linear-gradient(to right, #2579bf, #2593d5);
 
 		@include is-sp {
-			clip-path: polygon(0 3%, 100% 0.7%, 100% 100%, 0% 100%);
+			clip-path: polygon(0 3%, 100% 0%, 100% 100%, 0% 100%);
 		}
 	}
 
@@ -83,6 +84,32 @@
 
 			.l-wrap {
 				margin-top: -50px;
+			}
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 40%;
+			top: 0;
+			left: 0;
+			right: 0;
+			clip-path: polygon(50% -10%, 100% 0, 100% 16%, 72% 33%, 0% 19%, 0 0, 0 0);
+			background: linear-gradient(to right, #0059c6, #000017);
+			opacity: 0.4;
+			z-index: 1;
+			@include is-sp {
+				clip-path: polygon(
+					50% 0%,
+					100% 0%,
+					100% 75%,
+					66% 100%,
+					0% 85%,
+					0% 0%,
+					0% 0%
+				);
+				height: 7.3%;
 			}
 		}
 	}
