--- a/src/assets/scss/pages/_groupbusiness.scss
+++ b/src/assets/scss/pages/_groupbusiness.scss
@@ -42,6 +42,18 @@
 	.top-clip {
 		margin-top: -115px;
 	}
+
+	.sect_1__inner--left {
+		@include is-sp {
+			letter-spacing: .08em;
+		}
+	}
+
+	.sect_1 {
+		@include is-sp {
+			clip-path: polygon(0% 40px, 100% 0%, 100% 100%, 0% 100%);
+		}
+	}
 }
 
 .sect_1 {
@@ -66,7 +78,7 @@
 
 	.clip_cont {
 		clip-path: polygon(0 5.4%, 100% 0, 100% 100%, 0% 100%);
-		background: linear-gradient(to right, #2579bf, #2593d5);
+		// background: linear-gradient(to right, #2579bf, #2593d5);
 
 		@include is-sp {
 			clip-path: polygon(0 3%, 100% 0%, 100% 100%, 0% 100%);
@@ -105,7 +117,7 @@
 					100% 0%,
 					100% 75%,
 					66% 100%,
-					0% 85%,
+					0% 45%,
 					0% 0%,
 					0% 0%
 				);
@@ -265,26 +277,26 @@
 
 	&__box-sm {
 		position: absolute;
-		top: 87px;
-		right: 127px;
+		top: -93px;
+		right: 71px;
 
-		@include is-max(1000px) {
-			width: 50%;
-			top: 70px;
-			right: 15px;
-		}
+		// @include is-max(1000px) {
+		// 	width: 50%;
+		// 	top: 70px;
+		// 	right: 15px;
+		// }
 
 		@include is-sp {
 			width: 175px;
-			top: 43px;
+			top: -83px;
 			right: 7px;
 		}
 	}
 
 	&__box-big {
 		position: absolute;
-		left: 0;
-		top: 245px;
+		left: -65px;
+		top: 69px;
 		@include is-max(1000px) {
 			display: none;
 		}
