--- a/src/assets/scss/object/project/_footer.scss
+++ b/src/assets/scss/object/project/_footer.scss
@@ -108,7 +108,8 @@
 		}
 
 		&-col2 {
-			padding-right: 35px;
+			// padding-right: 35px;
+			width: 180px;
 
 			@include is-max(854px) {
 				padding-right: 22px;
@@ -255,7 +256,9 @@
 		}
 
 		&-col3 {
-			padding: 0 41px 0 32px;
+			// padding: 0 41px 0 32px;
+			padding-left: 32px;
+			width: 210px;
 			border-right: 1px solid #fff;
 			border-left: 1px solid #fff;
 
@@ -398,8 +401,11 @@
 			}
 		}
 		&-col4 {
-			padding: 0 71px 0 31px;
+			// padding: 0 71px 0 31px;
+			padding-left: 31px;
+			padding-right: 0;
 			border-right: 1px solid #fff;
+			width: 200px;
 
 			@include is-max(1024px) {
 				padding-right: 40px;
