--- a/src/assets/scss/pages/_saleofrealestate.scss
+++ b/src/assets/scss/pages/_saleofrealestate.scss
@@ -1,4 +1,6 @@
 .sore {
+	position: relative;
+
 	.c-banner--ttl {
 		& p:first-child {
 			@include font-line(30);
@@ -120,7 +122,7 @@
 	.sect_1 {
 		position: relative;
 		background: linear-gradient(to right, #0059c4, #000017);
-		clip-path: polygon(0 10%, 100% 0, 100% 85%, 75% 100%, 21% 92%, 0 79%);
+		clip-path: polygon(0 10%, 100% 0, 100% 85%, 75% 100%, 13% 92%, 0 82%);
 		margin-top: 0;
 
 		@include is-sp{
@@ -193,6 +195,10 @@
 		&__center {
 			padding-top: 160px;
 			background: linear-gradient(to left, #0059c6, #000017) !important;
+
+			&::before{
+				display: none;
+			}
 
 			@include is-sp{
 				padding-bottom: 115px;
@@ -859,5 +865,94 @@
 	.sect_2__box-big-new2 {
 		bottom: 20px;
 		opacity: 0.8;
+	}
+}
+
+.sore_1{
+	position: relative;
+	z-index: 150;
+
+	.sect_1{
+		clip-path: polygon(0 10%, 100% 0, 100% 85%, 65% 100%, 13% 94%, 0 82%);
+
+		@include is-sp{
+			clip-path: polygon(0 7%, 100% 0, 110% 87%, 52% 91%, 15% 94%, 0 91%);
+		}
+		
+		&::before{
+			
+			@include is-sp{
+				clip-path: polygon(0 23%, 100% 0, 100% 56%, 64% 80%, 0% 40%);
+			}
+		}
+	}
+
+	.sect_1__center{
+		padding-top: 170px;
+	}
+	
+	.sect_1__box-big-new{
+
+		@include is-sp{
+			top: -73px;
+		}
+	}
+
+	.sect_2__box-big-new{
+		opacity: 1;
+		top: 150px;
+
+		@include is-sp{
+			opacity: 0.4;
+			top: 160px;
+			width: 133px;
+		}
+	}
+
+	.sore__section_3{
+		padding-top: 80px;
+	}
+
+	.sect_4__box-big-new{
+		left: 46%;;
+		top: -73px;
+		z-index: -150;
+		opacity: 0.6;
+
+		@include is-sp{
+			right: 19px;
+			left: unset;
+			top: -60px;
+		}
+	}
+
+	.sect_4__box-big-new2{
+		opacity: 0.6;
+	}
+
+	.sect_5__box-big-new{
+		display: none;
+	}
+
+	.sect_5__box-big-new-sp{
+		top: 20%;
+		position: absolute;
+		left: unset;
+		right: 24px;
+
+		@include is-sp{
+			top: 0;
+			width: 124px;
+		}
+	}
+
+	.sore__section_5{
+
+		.txt_small{
+			
+			@include is-sp{
+				padding-top: 60px;
+			}
+		}
 	}
 }
